--- a/parts/res/xml/doze_settings.xml
+++ b/parts/res/xml/doze_settings.xml
@@ -66,7 +66,7 @@
             android:defaultValue="false"
             android:disableDependentsState="true"
             android:key="gesture_raise_to_wake"
-            android:summary="@string/raise_to_wake_gesture_summary"
+            android:icon="@drawable/ic_doze_pickup"
             android:title="@string/raise_to_wake_gesture_title" />
 
         </PreferenceCategory>
